<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_match"
        android:icon="@drawable/ic_trophy"
        android:title="@string/match"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_team"
        android:icon="@drawable/ic_team"
        android:title="@string/team"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_favorite"
        android:icon="@drawable/ic_star"
        android:title="@string/favorite"
        app:showAsAction="ifRoom"/>
</menu>