<resources>
    <string name="app_name">Football Schedule</string>

    <array name="leagues">
        <item>English Premier League</item>
        <item>English League Championship</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>French Ligue 1</item>
        <item>Spanish La Liga</item>
    </array>

    <integer-array name="league_id">
        <item>4328</item>
        <item>4329</item>
        <item>4331</item>
        <item>4332</item>
        <item>4334</item>
        <item>4335</item>
    </integer-array>

    <string name="data_empty">Data is empty</string>
    <string name="data_error">Something wrong, please try again</string>
    <string name="defense">Defense</string>
    <string name="event_title">Schedule</string>
    <string name="favorite">FAVORITE</string>
    <string name="favorite_title">Favorite</string>
    <string name="forward">Forward</string>
    <string name="goal">GOAL</string>
    <string name="goalkeeper">Goalkeeper</string>
    <string name="lineup">LINEUP</string>
    <string name="logo">Logo</string>
    <string name="match">MATCH</string>
    <string name="midfield">Midfield</string>
    <string name="red_card">Red Card</string>
    <string name="search_label">Search...</string>
    <string name="team">TEAM</string>
    <string name="team_title">Team</string>
    <string name="yellow_card">Yellow Card</string>

</resources>
