<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/event_swipe_refresh"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/event_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ProgressBar
                android:id="@+id/event_progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />

            <TextView
                android:id="@+id/event_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data_empty"
                android:textSize="24sp"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>
